<?xml version="1.0" encoding="utf-8"?>

<android.support.design.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/oc_channel_card_image_height"
            android:background="@drawable/gradient_bg" >
        </FrameLayout>


        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_alignBottom="@id/channelImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:lines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/organisation"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/channelImage"
            android:ellipsize="end"
            android:lines="1"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/organisation_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/organisation"
            android:ellipsize="end"
            android:lines="1"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/channel_description_placeholder" />

        <android.support.design.button.MaterialButton
            android:id="@+id/subscribe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/description"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/oc_subscribe_button"/>

    </RelativeLayout>

</android.support.design.card.MaterialCardView>